--- a/CIE483_Lecture5_MNIST_in_Keras.ipynb
+++ b/CIE483_Lecture5_MNIST_in_Keras.ipynb
@@ -279,7 +279,7 @@
         "\n",
         "Instead of a 28 x 28 matrix, we want to [link text](https://)build our network to accept a 784-length vector.\n",
         "\n",
-        "Each image needs to be then reshaped (or flattened) into a vector. We'll also normalize the inputs to be in the range [0-1] rather than [0-255]. Normalizing inputs is generally recommended, so that any additional dimensions (for other network architectures) are of the same scale."
+        "Each image needs to be then reshaped (or flattened) into a vector. We'll also normalize the inputs to be in the range [0-1] rather than [0-255]. Normalizing inputs is generally recommended, so that any additional dimensions (for other network architectures) are of the same scale. In other words, main goal of normalization is to equalize the relative importance of the dimensions of the input."
       ]
     },
     {
@@ -371,7 +371,7 @@
         "id": "YvRUhsABELtm"
       },
       "source": [
-        "# Building a 2-layer fully connected network (FCN)\n",
+        "# First Try - Building a 2-layer fully connected network (FCN)\n",
         "\n",
         "We'll first build a simple neural network consisting of two fully connected layers and apply this to the digit classification task.\n",
         "(Note that the input layer is usually not counted as a trainable layer).\n",
@@ -409,7 +409,7 @@
         "id": "8ZgLB2hmELtm"
       },
       "source": [
-        "## The first hidden layer"
+        "## The hidden layer"
       ]
     },
     {
@@ -421,10 +421,11 @@
       },
       "outputs": [],
       "source": [
-        "# The first hidden layer is a set of 512 nodes (artificial neurons).\n",
+        "# The first hidden layer is a set of N nodes (artificial neurons).\n",
         "# Each node will receive an element from each input vector and apply some weight and bias to it.\n",
+        "N = 128\n",
         "\n",
-        "model.add(Dense(512, input_shape=(784,))) #(784,) is not a typo -- that represents a 784 length vector!"
+        "model.add(Dense(N, input_shape=(784,))) #(784,) represents a 784 length vector!"
       ]
     },
     {
@@ -466,7 +467,7 @@
       "source": [
         "# Dropout zeroes a selection of random outputs (i.e., disables their activation)\n",
         "# Dropout helps protect the model from memorizing or \"overfitting\" the training data.\n",
-        "model.add(Dropout(0.2))"
+        "#model.add(Dropout(0.2))"
       ]
     },
     {
@@ -491,9 +492,9 @@
         "# However, instead of each of the 512-node receiving 784-inputs from the input image data,\n",
         "# they receive 512 inputs from the output of the first 512-node layer.\n",
         "\n",
-        "model.add(Dense(512))\n",
-        "model.add(Activation('relu'))\n",
-        "model.add(Dropout(0.2))"
+        "#model.add(Dense(512))\n",
+        "#model.add(Activation('relu'))\n",
+        "#model.add(Dropout(0.2))"
       ]
     },
     {
@@ -502,7 +503,9 @@
         "id": "u6EodhRSELtn"
       },
       "source": [
-        "## The Final Output Layer"
+        "## The Output Layer\n",
+        "The final layer of 10 neurons in fully-connected to the previous N-node layer.\n",
+        "The final layer of a FCN should be equal to the number of desired classes (10 in this case).\n"
       ]
     },
     {
@@ -514,10 +517,19 @@
       },
       "outputs": [],
       "source": [
-        "# The final layer of 10 neurons in fully-connected to the previous 512-node layer.\n",
-        "# The final layer of a FCN should be equal to the number of desired classes (10 in this case).\n",
         "model.add(Dense(10))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we use the softmax activation function to represent a probability distribution over K different possible outcomes.\n",
+        "Its values are all non-negative and sum to 1.\n",
+        "Each node of the output layer contains a score that indicates the probability that the current image belongs to one of the handwritten digit classes.\n"
+      ],
+      "metadata": {
+        "id": "Z7636Q5CXnhO"
+      }
     },
     {
       "cell_type": "code",
@@ -528,9 +540,6 @@
       },
       "outputs": [],
       "source": [
-        "# The \"softmax\" activation represents a probability distribution over K different possible outcomes.\n",
-        "# Its values are all non-negative and sum to 1.\n",
-        "\n",
         "model.add(Activation('softmax'))"
       ]
     },
