--- a/CIE483_Lecture5_MNIST_in_Keras.ipynb
+++ b/CIE483_Lecture5_MNIST_in_Keras.ipynb
@@ -398,9 +398,7 @@
       },
       "outputs": [],
       "source": [
-        "# The Sequential model is a linear stack of layers and is very common.\n",
-        "\n",
-        "model = Sequential()"
+        "model = Sequential() # The Sequential model is a linear stack of layers"
       ]
     },
     {
@@ -409,7 +407,24 @@
         "id": "8ZgLB2hmELtm"
       },
       "source": [
-        "## The hidden layer"
+        "## The hidden layer\n",
+        "The first hidden layer is a set of N nodes (artificial neurons).\n",
+        "Each node will receive an element from each input vector and apply some weight and bias to it.\n",
+        "We will use in this layer the ReLU activation.\n",
+        "An \"activation\" is a non-linear function applied to the output of the layer above.\n",
+        "It checks the new value of the node, and decides whether that artifical neuron has fired.\n",
+        "The Rectified Linear Unit (ReLU) converts all negative inputs to nodes in the next layer to be zero.\n",
+        "Those inputs are then not considered to be fired.\n",
+        "Positive values of a node are unchanged.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rXr-HlpPELtn"
+      },
+      "source": [
+        "$$f_{ReLU}(x) = max (0,x)$$"
       ]
     },
     {
@@ -421,39 +436,9 @@
       },
       "outputs": [],
       "source": [
-        "# The first hidden layer is a set of N nodes (artificial neurons).\n",
-        "# Each node will receive an element from each input vector and apply some weight and bias to it.\n",
         "N = 128\n",
-        "\n",
-        "model.add(Dense(N, input_shape=(784,))) #(784,) represents a 784 length vector!"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "id": "yVlK4ci2ELtn"
-      },
-      "outputs": [],
-      "source": [
-        "# An \"activation\" is a non-linear function applied to the output of the layer above.\n",
-        "# It checks the new value of the node, and decides whether that artifical neuron has fired.\n",
-        "# The Rectified Linear Unit (ReLU) converts all negative inputs to nodes in the next layer to be zero.\n",
-        "# Those inputs are then not considered to be fired.\n",
-        "# Positive values of a node are unchanged.\n",
-        "\n",
+        "model.add(Dense(N, input_shape=(784,))) #(784,) represents a 784 length vector!\n",
         "model.add(Activation('relu'))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rXr-HlpPELtn"
-      },
-      "source": [
-        "$$f(x) = max (0,x)$$\n",
-        "<img src = 'relu.jpg' >"
       ]
     },
     {
@@ -467,33 +452,6 @@
       "source": [
         "# Dropout zeroes a selection of random outputs (i.e., disables their activation)\n",
         "# Dropout helps protect the model from memorizing or \"overfitting\" the training data.\n",
-        "#model.add(Dropout(0.2))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9qDVZ701ELtn"
-      },
-      "source": [
-        "## Adding the second hidden layer"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "id": "YNowr3UNELtn"
-      },
-      "outputs": [],
-      "source": [
-        "# The second hidden layer appears identical to our first layer.\n",
-        "# However, instead of each of the 512-node receiving 784-inputs from the input image data,\n",
-        "# they receive 512 inputs from the output of the first 512-node layer.\n",
-        "\n",
-        "#model.add(Dense(512))\n",
-        "#model.add(Activation('relu'))\n",
         "#model.add(Dropout(0.2))"
       ]
     },
